--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,5 +1,5 @@
 {
   "hooks": {
-    "pre-commit": "yarn audit && yarn flow:check && yarn lint:staged && yarn test"
+    "pre-commit": "yarn audit && yarn lint:staged && yarn test"
   }
 }
