--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@babel/preset-flow": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "copyfiles": "^2.1.0",
+    "coveralls": "^3.0.2",
     "cross-env": "^5.2.0",
     "eslint": "^5.13.0",
     "eslint-plugin-flowtype": "^3.4.2",
@@ -69,6 +70,7 @@
     "test:coverage": "BABEL_ENV=test jest --coverage",
     "test:types": "yarn test:types:ts && yarn test:types:flow",
     "test:types:ts": "tsc -p test/types/typescript/tsconfig.json",
-    "test:types:flow": "flow check"
+    "test:types:flow": "flow check",
+    "coveralls": "yarn test:coverage --coverageReporters=text-lcov | coveralls"
   }
 }
