--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "unpkg": "dist/index.min.js",
   "jsdelivr": "dist/index.min.js",
   "files": [
+    "dist/*",
     "cjs/*",
     "es/*",
     "LICENSE",
