--- a/package.json
+++ b/package.json
@@ -29,27 +29,27 @@
   "homepage": "https://github.com/Eazymov/cancel.it#readme",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-flow": "^7.0.0",
-    "babel-eslint": "^10.0.1",
-    "copyfiles": "^2.1.0",
-    "coveralls": "^3.0.2",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.13.0",
-    "eslint-plugin-flowtype": "^3.4.2",
+    "@babel/cli": "7.2.3",
+    "@babel/plugin-proposal-class-properties": "7.3.0",
+    "@babel/preset-env": "7.3.1",
+    "@babel/preset-flow": "7.0.0",
+    "babel-eslint": "10.0.1",
+    "copyfiles": "2.1.0",
+    "coveralls": "3.0.2",
+    "cross-env": "5.2.0",
+    "eslint": "5.13.0",
+    "eslint-plugin-flowtype": "3.4.2",
     "flow-bin": "0.92.1",
-    "flow-copy-source": "^2.0.3",
-    "flow-coverage-report": "^0.6.1",
-    "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "lint-staged": "^8.1.4",
-    "prettier": "^1.16.4",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-uglify": "^6.0.2",
-    "typescript": "^3.3.3"
+    "flow-copy-source": "2.0.3",
+    "flow-coverage-report": "0.6.1",
+    "husky": "1.3.1",
+    "jest": "24.8.0",
+    "lint-staged": "9.2.1",
+    "prettier": "1.16.4",
+    "rollup": "1.1.2",
+    "rollup-plugin-babel": "4.3.2",
+    "rollup-plugin-uglify": "6.0.2",
+    "typescript": "3.3.3"
   },
   "scripts": {
     "build": "yarn build:cjs && yarn build:es && yarn build:iife",
