--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "build:cjs": "cross-env BABEL_ENV=cjs babel src --out-dir cjs && yarn build:types cjs",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es && yarn build:types es",
     "build:iife": "cross-env BABEL_ENV=iife rollup -c",
-    "build:types": "copyup \"src/*.d.ts\" \"src/*.flow\"",
+    "build:types": "copyfiles -u 1 \"src/*.d.ts\" \"src/*.flow\"",
     "prettier": "prettier \"./**/*.{js,flow,json,md}\"",
     "prettier:check": "yarn prettier --check",
     "prettier:write": "yarn prettier --write",
